--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -68,3 +68,6 @@
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
+  tags:
+  - external-secrets
+  - external-secrets-store
