--- a/roles/abm-software/tasks/acm-install.yaml
+++ b/roles/abm-software/tasks/acm-install.yaml
@@ -40,47 +40,6 @@
   tags:
   - acm-root-repo
 
-# Check for ACM Operator
-- name: "Test for config-management operator presence"
-  include_tasks: kubectl-presence.yml
-  vars:
-    name: "config-management"
-    type: "configmanagements.configmanagement.gke.io"
-    namespace: ""
-    kubeconfig: "{{ kubeconfig_shared_location }}"
-    fact_name: "has_acm_operator"
-  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
-  tags:
-  - acm-operator
-
-- name: "Copy over apply-spec file"
-  template:
-    src: apply-spec.yaml.j2
-    dest: "{{ acm_config_files }}/apply-spec.yaml"
-  when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
-  tags:
-  - acm-config-management
-  - updated-acm
-
-- name: "Install ACM Operator"
-  shell: |
-      gcloud beta container fleet config-management apply --membership={{ cluster_name }} --config={{ acm_config_files }}/apply-spec.yaml --project={{ google_project_id }}
-  args:
-    executable: /bin/bash
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  - (has_acm_operator == false)
-  retries: "{{ default_retry_count }}"
-  delay: "{{ default_retry_delay }}"
-  register: result
-  until: result.rc == 0
-  tags:
-  - acm-operator
-  - gcloud-command
-
 #### Root Repo Configuration
 
 # NOTE: If the git-creds secret already exists, no action is taken. There is NO effort to determine what type of secret so switching between types requires removal of the `git-creds` secret within the cluster
@@ -129,6 +88,48 @@
   - acm-root-repo
   - acm-root-repo-gcp-gsa-method
 
+# Check for ACM Operator
+- name: "Test for config-management operator presence"
+  include_tasks: kubectl-presence.yml
+  vars:
+    name: "config-management"
+    type: "configmanagements.configmanagement.gke.io"
+    namespace: ""
+    kubeconfig: "{{ kubeconfig_shared_location }}"
+    fact_name: "has_acm_operator"
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
+  tags:
+  - acm-operator
+
+- name: "Copy over apply-spec file"
+  template:
+    src: apply-spec.yaml.j2
+    dest: "{{ acm_config_files }}/apply-spec.yaml"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+  tags:
+  - acm-config-management
+  - updated-acm
+  - generate-apply-sync
+
+- name: "Install ACM Operator"
+  shell: |
+      gcloud beta container fleet config-management apply --membership={{ cluster_name }} --config={{ acm_config_files }}/apply-spec.yaml --project={{ google_project_id }}
+  args:
+    executable: /bin/bash
+  when:
+  - (primary_cluster_machine is defined)
+  - (primary_cluster_machine == true)
+  - (has_acm_operator == false)
+  retries: "{{ default_retry_count }}"
+  delay: "{{ default_retry_delay }}"
+  register: result
+  until: result.rc == 0
+  tags:
+  - acm-operator
+  - gcloud-command
+
 ###
 ### Configure PrimaryRootRepo
 ###
@@ -143,7 +144,7 @@
   - acm-root-repo
   - generate-root-sync
 
-- name: "Test for Root Repo installed"
+- name: "Test for Root Repo CRDs installed"
   include_tasks: kubectl-presence.yml
   vars:
     name: "{{ primary_root_sync_name }}"
@@ -157,28 +158,35 @@
   tags:
   - acm-root-repo
 
-- name: "Apply Root Repo configuration"
-  shell: |
-    kubectl apply -f {{ acm_config_files }}/root-sync.yaml
-    sleep 10s # just enough for the API to pick up the changes, then wait can take over
-    kubectl wait --for=condition=established --timeout=600s crd rootsyncs.configsync.gke.io
-    exit $?
-  environment:
-    KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  retries: "{{ default_retry_count }}"
-  delay: "{{ default_retry_delay }}"
-  register: root_apply_result
-  until: root_apply_result.rc == 0
-  when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
-    - (has_root_repo_installed == false)
+# - name: "Apply Primary Root Repo configuration"
+#   shell: |
+#     kubectl apply -f {{ acm_config_files }}/root-sync.yaml
+#     sleep 10s
+#     kubectl apply -f {{ acm_config_files }}/root-sync.yaml
+#   environment:
+#     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+#   retries: "{{ default_retry_count }}"
+#   delay: "{{ default_retry_delay }}"
+#   register: root_apply_result
+#   until: root_apply_result.rc == 0
+#   when:
+#     - (primary_cluster_machine is defined)
+#     - (primary_cluster_machine == true)
+#     - (has_root_repo_installed == false)
+#   tags:
+#   - acm-root-repo
+
+## TODO: If the above fails, stop all
+- name: Primary Root Repo has not deployed correctly
+  fail:
+    msg: "Primary Root Repo failed. Failure caused by expected {{ ansible_play_hosts_all|length }} hosts but have {{ ansible_play_hosts|length }}"
+  when: (ansible_play_hosts_all|length) != (ansible_play_hosts|length)
   tags:
   - acm-root-repo
 
 - name: "Wait for RootReconciler deployment to be ready"
   command:
-    cmd: kubectl wait --for=condition=available --timeout=600s deployment.apps/root-reconciler-{{ primary_root_sync_name }} -n config-management-system
+    cmd: kubectl wait --for=condition=available --timeout=600s deployment.apps/root-reconciler -n config-management-system
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   retries: "{{ default_retry_count }}"
@@ -220,7 +228,7 @@
   - acm-monitoring-config
   - gcloud-mutate
 
-- name: "Annotate KubeCTL ACM Monitoring service account for ACM monitoring"
+- name: "Annotate kubectl ACM Monitoring service account for ACM monitoring"
   command:
     cmd: kubectl annotate serviceaccount default iam.gke.io/gcp-service-account=acm-mon-{{ cluster_name }}@{{ google_project_id }}.iam.gserviceaccount.com --namespace config-management-monitoring --overwrite=true
   environment:
