--- a/roles/abm-software/tasks/create-snapshot.yaml
+++ b/roles/abm-software/tasks/create-snapshot.yaml
@@ -63,12 +63,16 @@
     cmd: gsutil ls -p {{ google_project_id }} gs://{{ snapshot_gcs_bucket_base }}
   ignore_errors: true
   register: bucket_exists
+  tags:
+  - gcloud-mutate
 
 - name: Create if missing
   command:
     cmd: gsutil mb -p {{ google_project_id }} gs://{{ snapshot_gcs_bucket_base }}
   when:
   - bucket_exists.rc > 0
+  tags:
+  - gcloud-mutate
 
 # Perform Snapshot collection & push to bucket
 - name: Create snapshot
@@ -79,7 +83,7 @@
 
 - name: Upload snapshot to GCS
   command:
-    cmd: gsutil cp {{ snapshot_output_file }} gs://{{ snapshot_gcs_bucket_base }}/{{ cluster_name }}/{{ snapshot_output_file_name }}
+    cmd: gsutil cp {{ snapshot_output_file }} gs://{{ snapshot_gcs_bucket_base }}/{{ snapshot_output_file_name }}
   register: success_upload
   args:
     chdir: "{{ abm_install_folder }}"
