--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -14,6 +14,7 @@
   when:
   - (primary_cluster_machine is defined)
   - (primary_cluster_machine == true)
+  - (not use_workload_identity_for_external_secrets | bool)
   tags:
   - external-secrets-operator
   - external-secrets
@@ -31,6 +32,7 @@
   - (primary_cluster_machine is defined)
   - (primary_cluster_machine == true)
   - (has_es_secret == false)
+  - (not use_workload_identity_for_external_secrets | bool)
   tags:
   - external-secrets-secret
   - external-secrets
