--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -2,6 +2,17 @@
 ### This file runs after ExternalSecrets has been installed into the cluster
 ###
 
+
+- name: Setup Workload Identity for External Secrets
+  run_once: true
+  command:
+    cmd: gcloud iam service-accounts add-iam-policy-binding --role roles/iam.workloadIdentityUser --member "serviceAccount:{{ google_project_id }}.svc.id.goog[external-secrets/external-secrets]" es-k8s-{{ cluster_name }}@{{ google_service_account_project_id }}.iam.gserviceaccount.com --project {{ google_service_account_project_id }}
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (use_workload_identity_for_external_secrets | bool)
+
+
 # TODO: Setup a conditional for idempotency (does this already exist?)
 - name: "Test for External Secrets secret"
   include_tasks: kubectl-presence.yml
