--- a/roles/ready-ubuntu/vars/main.yml
+++ b/roles/ready-ubuntu/vars/main.yml
@@ -11,3 +11,5 @@ ssh_key_path_pub: "{{ ssh_user_home }}/{{ ssh_key_name }}.pub"
 
 # let's get the primary network interface
 prinetint: "{{ ansible_default_ipv4.interface }}"
+
+docker_service_path: "/etc/systemd/system/docker.service.d"
