--- a/docker-build/cloudbuild-automation.yaml
+++ b/docker-build/cloudbuild-automation.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     id: Build Provisioning Image
-    args: ['build', '-t', 'gcr.io/${PROJECT_ID}/consumer-edge-install', '.']
+    args: ['build', '-t', 'gcr.io/${PROJECT_ID}/consumer-edge-install', 'docker-build/.']
 
 images:
   - gcr.io/${PROJECT_ID}/consumer-edge-install
