split target machine GSA into provisioning and node
rename references of local_gsa_key to provisioning_gsa_key
rename consumer-edge-gsa.json references to provisioning-gsa.json
rename create-primary-gsa.sh to create-gsa.sh
rename gsa-key.json to provisioning-gsa.json
remove the provisioning GSA when complete
add node GSA items to Ansible and helper scripts
update comments, docstrings

Change-Id: I47445e526b782d7061c26b4d680ff8c106f50e5c

--- a/.gitignore
+++ b/.gitignore
@@ -98,8 +98,7 @@ test-report.xml
 coverage-report.xml
 
 # Ignore key files
-gsa-key.json
-remote-gsa-key.json
+provisioning-gsa.json
 
 # ansible temp files
 ansible*temp
