--- a/roles/abm-post-install/tasks/main.yml
+++ b/roles/abm-post-install/tasks/main.yml
@@ -29,3 +29,11 @@
   tags:
   - abm-post-install
   - observability-setup
+
+# Remove the provisioning GSA after installation is complete
+- name: Remove the provisioning GSA
+  ansible.builtin.file:
+    path: '{{ remote_keys_folder }}/provisioning-gsa.json'
+    state: absent
+  tags:
+    - gsa-removal
