--- a/roles/abm-post-install/tasks/setup-google-observability.yml
+++ b/roles/abm-post-install/tasks/setup-google-observability.yml
@@ -85,7 +85,7 @@
     - { service: 'google-fluentd', script: 'add-logging-agent-repo.sh' }
   register: agent_results
   environment:
-    GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_keys_folder }}/gsa-key.json"
+    GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_keys_folder }}/provisioning-gsa.json"
   tags:
   - observability-agent-install
   - observability-setup
@@ -258,4 +258,3 @@
   when: (full_reset is defined) and (full_reset == "True")
   tags:
   - observability-removal
-
