--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -13,14 +13,17 @@
 ### Create or enable Google Service Accounts
   - name: Create or Enable Service Accounts
     shell: |
-      SA_NAME="{{ item.name }}"
-      PROJECT="{{ google_project_id }}"
-      DESCRIPTION="{{ item.description }}"
-      CURR_SA_NAME=$(gcloud iam service-accounts describe ${SA_NAME}@${PROJECT}.iam.gserviceaccount.com --format="value(name)" 2> /dev/null)
-      if [ -z "$CURR_SA_NAME" ]; then
-          gcloud iam service-accounts create ${SA_NAME} --display-name "${DESCRIPTION}"
-      else
-          gcloud iam service-accounts enable "${SA_NAME}@${PROJECT}.iam.gserviceaccount.com"
+      ENABLED="{{ item.enabled }}"
+      if [[ ${ENABLED} == "True" || ${ENABLED} == "true" ]] ; then    
+        SA_NAME="{{ item.name }}"
+        PROJECT="{{ google_project_id }}"
+        DESCRIPTION="{{ item.description }}"
+        CURR_SA_NAME=$(gcloud iam service-accounts describe ${SA_NAME}@${PROJECT}.iam.gserviceaccount.com --format="value(name)" 2> /dev/null)
+        if [ -z "$CURR_SA_NAME" ]; then
+            gcloud iam service-accounts create ${SA_NAME} --display-name "${DESCRIPTION}"
+        else
+            gcloud iam service-accounts enable "${SA_NAME}@${PROJECT}.iam.gserviceaccount.com"
+        fi
       fi
     loop: "{{ service_accounts }}"
     run_once: true # only one machine to do this
@@ -34,8 +37,11 @@
     - gcloud-mutate
 
   - name: Add roles to service accounts
-    command:
-      cmd: gcloud projects add-iam-policy-binding {{ google_project_id }} --member="serviceAccount:{{ item.0.name }}@{{ google_project_id }}.iam.gserviceaccount.com" --role="{{ item.1 }}"
+    shell: |
+      ENABLED="{{ item.0.enabled }}"
+      if [[ ${ENABLED} == "True" || ${ENABLED} == "true" ]] ; then    
+        gcloud projects add-iam-policy-binding {{ google_project_id }} --member="serviceAccount:{{ item.0.name }}@{{ google_project_id }}.iam.gserviceaccount.com" --role="{{ item.1 }}"
+      fi
     loop: "{{ service_accounts | subelements('roles') }}"
     run_once: true
     tags:
@@ -47,11 +53,14 @@
   - name: "Create Secret if SA keys does not exists in secrets manager"
     run_once: true # only one machine to do this
     shell: |
-      export HAS_SECRET=$(gcloud secrets list --filter="name~{{ item.name }}" --format="value(name)" --project="{{ google_project_id }}")
-      if [ -z "$HAS_SECRET" ]; then
-        gcloud secrets create {{ item.name }} --replication-policy="automatic" --project={{ google_project_id }}
-        echo "NO SECRET {{ item.name }}"
-        exit 1 # exit early, no chance there's a version since there wasn't a secret
+      ENABLED="{{ item.enabled }}"
+      if [[ ${ENABLED} == "True" || ${ENABLED} == "true" ]] ; then
+        export HAS_SECRET=$(gcloud secrets list --filter="name~{{ item.name }}" --format="value(name)" --project="{{ google_project_id }}")
+        if [ -z "$HAS_SECRET" ]; then
+          gcloud secrets create {{ item.name }} --replication-policy="automatic" --project={{ google_project_id }}
+          echo "NO SECRET {{ item.name }}"
+          exit 1 # exit early, no chance there's a version since there wasn't a secret
+        fi
       fi
     args:
       executable: /bin/bash
@@ -71,16 +80,19 @@
   - name: "Check if secret and version exists in secrets manager"
     run_once: true # only one machine to do this
     shell: |
-      export HAS_SECRET=$(gcloud secrets list --filter="name~{{ item.name }}" --format="value(name)" --project="{{ google_secret_project_id }}")
-      if [ -z "$HAS_SECRET" ]; then
-        echo "NO SECRET {{ item.name }}"
-        exit 1 # exit early, no chance there's a version since there wasn't a secret
-      fi
+      ENABLED="{{ item.enabled }}"
+      if [[ ${ENABLED} == "True" || ${ENABLED} == "true" ]] ; then    
+        export HAS_SECRET=$(gcloud secrets list --filter="name~{{ item.name }}" --format="value(name)" --project="{{ google_secret_project_id }}")
+        if [ -z "$HAS_SECRET" ]; then
+          echo "NO SECRET {{ item.name }}"
+          exit 1 # exit early, no chance there's a version since there wasn't a secret
+        fi
 
-      gcloud secrets versions access latest --secret="{{ item.name }}" --project="{{ google_secret_project_id }}" &>/dev/null
-      if [ $? -gt 0 ]; then
-        echo "NO SECRET {{ item.name }}"
-        exit 1
+        gcloud secrets versions access latest --secret="{{ item.name }}" --project="{{ google_secret_project_id }}" &>/dev/null
+        if [ $? -gt 0 ]; then
+          echo "NO SECRET {{ item.name }}"
+          exit 1
+        fi
       fi
     args:
       executable: /bin/bash
@@ -99,9 +111,12 @@
   - name: Create new keys for all service accounts in configuration and push to Secret Manager
     run_once: true # only one machine to do this
     shell: |
-      gcloud iam service-accounts keys create /tmp/{{ entry.item.keyfile }} --iam-account={{ entry.item.name }}@{{ google_project_id }}.iam.gserviceaccount.com --project={{ google_project_id }}
-      gcloud secrets versions add {{ entry.item.name }} --data-file="/tmp/{{ entry.item.keyfile }}"
-      rm -rf /tmp/{{ entry.item.keyfile }} # delete temp file
+      ENABLED="{{ entry.item.enabled }}"
+      if [[ ${ENABLED} == "True" || ${ENABLED} == "true" ]] ; then
+        gcloud iam service-accounts keys create /tmp/{{ entry.item.keyfile }} --iam-account={{ entry.item.name }}@{{ google_project_id }}.iam.gserviceaccount.com --project={{ google_project_id }}
+        gcloud secrets versions add {{ entry.item.name }} --data-file="/tmp/{{ entry.item.keyfile }}"
+        rm -rf /tmp/{{ entry.item.keyfile }} # delete temp file
+      fi
     args:
       executable: /bin/bash
     when: entry.rc != 0
@@ -117,7 +132,10 @@
 
   - name: Download key files from secret manager locally
     shell: |
-      gcloud secrets versions access latest --secret="{{ item.name }}" >> {{ remote_keys_folder }}/{{ item.keyfile }} --project="{{ google_secret_project_id }}"
+      ENABLED="{{ item.enabled }}"
+      if [[ ${ENABLED} == "True" || ${ENABLED} == "true" ]] ; then
+        gcloud secrets versions access latest --secret="{{ item.name }}" >> {{ remote_keys_folder }}/{{ item.keyfile }} --project="{{ google_secret_project_id }}"
+      fi
     args:
       executable: /bin/bash
       creates: "{{ remote_keys_folder }}/{{ item.keyfile }}"
