add copy provisioning GSA task to roles/abm-remove/tasks/remove-abm.yaml
Change-Id: Iacebbd59185ded4496beff42ae1d9aa418052ac5

--- a/roles/abm-remove/tasks/remove-abm.yaml
+++ b/roles/abm-remove/tasks/remove-abm.yaml
@@ -10,6 +10,17 @@
     - abm-remove
     - never
 
+- name: Copy provisiong GSA to nodes for ABM reset
+  copy:
+    src: '{{ provisioning_gsa_key }}'
+    dest: '{{ remote_keys_folder }}/provisioning-gsa.json'
+    mode: '0444' # read only
+    group: 'root'
+    owner: 'root'
+  tags:
+    - abm-remove
+    - never
+
 - name: "Remove the ABM installation (cluster removal only)"
   command:
     cmd: bmctl reset -c {{ cluster_name }}
