Only take 1st 100 char for description
Change-Id: Icf8684ee2b74211ce890eea294f3a95e4a785fc6

--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -20,7 +20,7 @@
         DESCRIPTION="{{ item.description }}"
         CURR_SA_NAME=$(gcloud iam service-accounts describe ${SA_NAME}@${PROJECT}.iam.gserviceaccount.com --format="value(name)" 2> /dev/null)
         if [ -z "$CURR_SA_NAME" ]; then
-            gcloud iam service-accounts create ${SA_NAME} --display-name "${DESCRIPTION}"
+            gcloud iam service-accounts create ${SA_NAME} --display-name "${DESCRIPTION:0:98}"
         else
             gcloud iam service-accounts enable "${SA_NAME}@${PROJECT}.iam.gserviceaccount.com"
         fi
